-issue#4978: Graph timezone issue
-issue#4980: Business Hour php errors
-issue#4988: Data Templates that include many Data Sources bug only a few are used, cause RRDfile bloat
-issue#4990: Backtrace generated on the Links page due to undefined variable use
-issue#4991: Updating a Data Template does not properly switch the rrd_heartbeat properly for all data sources resulting in empty graphs
-feature#1100: Structured path not created when using remote poller and Update On-Demand
-feature#1392: AJAX handled errors do not notify Admins that page errors exist
-feature#2239: Allow Import and Export to be more controlled
-feature#2485: Importing Template requires you to upload the same file after previewing
-feature#2548: Logs display Order vs head or tail
-feature#2567: For large systems, the sort buffer should be optimized for large tables
-feature#2747: Provide better sorting in Console >Management > Graphs
-feature#3131: Button to reindex bad indexes
-feature#4025: When importing a Template or Package, allow the user to use the system default Height, Width, and Image format instead of the one embedded in the Template
-feature#4239: On "Graph Utility View" add the name of and a link to the graph template which the graph is based on
-feature#4417: Remote Pollers - Support execution of custom functions at poller bottom
-feature#4638: Detect the graph with stale rrd or missing rrd
-feature#4762: Allow Package Import to be selective
-feature#4967: Make adding Associated Graph Templates and Data Queries easier to use
-feature#4786: Windows install does not support SVG rendering
-feature#4820: When importing, make it possible to only import certain components
-feature#4841: Move the cactid function db_check_reconnect() to lib/database.php for other service oriented scripts
-feature#4874: Add support for showing business hours
-feature#4890: Add multi threading for Poller rechace script